fix table width on mobile

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ h3 {
 
 table {
   width: 100%;
+  min-width: 600px;
   border-collapse: collapse;
   margin-bottom: 20px;
   background-color: white;
